<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorToolbar">

    <include
        android:id="@+id/toolbar_clean"
        layout="@layout/tool_bar" />

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    app:layout_constraintEnd_toStartOf="@id/toolbar_clean"
    app:layout_constraintStart_toStartOf="@id/toolbar_clean"
    app:layout_constraintTop_toBottomOf="@id/toolbar_clean"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">



        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.0"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="1"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.0" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="1.0" />
        <LinearLayout
            android:id="@+id/lnyText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:foregroundGravity="center"
            app:layout_constraintEnd_toStartOf="@id/guideline2"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/guidelineV">

            <TextView
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@android:color/white"
                android:text="¡DEVORA TU APP  FAVORITA Y DISFRUTA DE LO SENCILLO!"
                android:textAlignment="center"
                android:gravity="center"
                android:textColor="@color/colorPrimary"
                android:textSize="25dp"
                android:textStyle="italic"
                app:layout_constraintEnd_toStartOf="@id/guideline2"
                app:layout_constraintStart_toStartOf="@id/guideline"
                app:layout_constraintTop_toBottomOf="@id/guidelineV" />

        </LinearLayout>


        <ImageView
            android:id="@+id/image2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/cartel"
            app:layout_constraintEnd_toStartOf="@id/guideline2"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/lnyText"/>

        <LinearLayout
            android:id="@+id/clSecundaria"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:orientation="horizontal"
            android:backgroundTint="@color/colorPrimary"
            app:layout_constraintEnd_toStartOf="@id/guideline2"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/image2">

            <Button
                android:id="@+id/btnRestaurante"
                android:layout_width="0dp"
                android:layout_height="90dp"
                android:layout_weight="1.9"
                android:text="@string/Restaurantes"
                android:drawableTop="@drawable/restauran"
                android:background="@color/colorPrimary"
                app:layout_constraintEnd_toStartOf="@id/clSecundaria"
                app:layout_constraintStart_toStartOf="@id/clSecundaria"
                app:layout_constraintTop_toBottomOf="@id/clSecundaria"/>



            <Button
                android:id="@+id/btnQr"
                android:layout_width="0dp"
                android:layout_height="90dp"
                android:layout_weight="1.9"
                android:text="@string/Código_QR"
                android:drawableTop="@drawable/qr"
                android:background="@color/colorPrimary"
                app:layout_constraintEnd_toStartOf="@id/clSecundaria"
                app:layout_constraintStart_toStartOf="@id/clSecundaria"
                app:layout_constraintTop_toBottomOf="@id/clSecundaria"/>




            <Button
                android:id="@+id/btnInstagram"
                android:layout_width="0dp"
                android:layout_height="90dp"
                android:layout_weight="1.9"
                android:text="@string/Instagram"
                android:drawableTop="@drawable/instagram"
                android:drawableBottom="@color/colorPrimary"
                android:background="@color/colorPrimary"
                app:layout_constraintEnd_toStartOf="@id/clSecundaria"
                app:layout_constraintStart_toStartOf="@id/clSecundaria"
                app:layout_constraintTop_toBottomOf="@id/clSecundaria"/>



        </LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:layout_constraintEnd_toStartOf="@id/clSecundaria"
    app:layout_constraintStart_toStartOf="@id/clSecundaria"
    app:layout_constraintTop_toBottomOf="@id/clSecundaria">

    <TextView
        android:id="@+id/tvArea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:typeface="normal"
        android:layout_marginTop="30dp"
        android:textSize="18dp"
        android:text="@string/Área"
        app:layout_constraintEnd_toStartOf="@id/clSecundaria"
        app:layout_constraintStart_toStartOf="@id/clSecundaria"
        app:layout_constraintTop_toBottomOf="@id/clSecundaria"/>

    <TextView
        android:id="@+id/tvAppRenobar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:typeface="normal"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="70dp"
        android:textSize="18dp"
        android:text="@string/Enlace"
        app:layout_constraintEnd_toStartOf="@id/tvArea"
        app:layout_constraintStart_toStartOf="@id/tvArea"
        app:layout_constraintTop_toBottomOf="@id/tvArea"/>


</LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>




